fix font family, layout style, login page

--- a/src/global.less
+++ b/src/global.less
@@ -4,9 +4,10 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
-    'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-    'Noto Color Emoji';
+}
+
+* {
+  font-family: Be Vietnam, sans-serif !important;
 }
 
 .colorWeak {
@@ -35,7 +36,88 @@ ol {
   list-style: none;
 }
 
+.user-styled-img {
+  width: 440px;
+  margin: auto;
+}
+.row {
+  flex-direction: row;
+}
+.ant-input-affix-wrapper:hover,
+.ant-input-affix-wrapper-focused {
+  border-color: #639f52 !important;
+}
+.ant-checkbox-inner,
+.ant-checkbox-inner:hover {
+  background-color: transparent !important;
+  border-color: #639f52 !important;
+}
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #639f52 !important;
+}
+.ant-btn-primary {
+  background-color: #639f52 !important;
+}
+.ant-btn-lg {
+  height: auto;
+  padding: 4px 12px !important;
+}
+
+.ant-pro-global-header-logo.ant-pro-global-header-logo-mix {
+  width: 240px;
+  border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
+}
+.ant-layout-sider-children {
+  margin-right: 0 !important;
+  padding-right: 0 !important;
+}
+.ant-menu-item-selected,
+.ant-menu-item-active {
+  width: calc(100% - 4px) !important;
+  border-radius: 24px 0 0 24px !important;
+}
+.ant-menu-item-selected {
+  overflow: inherit !important;
+}
+.ant-menu-item.ant-menu-item-selected:after,
+.ant-menu-item.ant-menu-item-selected:before {
+  position: absolute !important;
+  right: 0 !important;
+  z-index: 1 !important;
+  display: block !important;
+  width: 40px;
+  height: 40px;
+  border-right: 0 none !important;
+  border-radius: 50% !important;
+  content: '' !important;
+}
+.ant-menu-item.ant-menu-item-selected:after {
+  top: auto !important;
+  bottom: -40px !important;
+  box-shadow: 30px -30px 0 10px #f4f7fe !important;
+  opacity: 1 !important;
+}
+.ant-menu-item.ant-menu-item-selected:before {
+  top: -40px !important;
+  box-shadow: 30px 30px 0 10px #f4f7fe !important;
+  opacity: 1 !important;
+}
+.ant-pro-layout .ant-pro-layout-bg-list,
+.ant-menu-item-selected {
+  background: #f4f7fe !important;
+}
+.ant-pro-sider-collapsed-button,
+.ant-pro-setting-drawer-handle {
+  display: none;
+}
 @media (max-width: 768px) {
+  .user-styled-img {
+    width: 90%;
+    margin: 'auto 5%';
+  }
+  .row {
+    flex-direction: column;
+  }
   .ant-table {
     width: 100%;
     overflow-x: auto;
