--- a/src/global.less
+++ b/src/global.less
@@ -63,10 +63,10 @@ ol {
   padding: 4px 12px !important;
 }
 
-.ant-pro-global-header-logo.ant-pro-global-header-logo-mix {
-  width: 240px;
-  border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
-}
+// .ant-pro-global-header-logo.ant-pro-global-header-logo-mix {
+//   width: 240px;
+//   border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
+// }
 .ant-layout-sider-children {
   margin-right: 0 !important;
   padding-right: 0 !important;
@@ -132,4 +132,23 @@ ol {
       }
     }
   }
+}
+
+.ant-pro-global-header-header-actions-avatar {
+  position: absolute !important;
+  left: 0 !important;
+  width: 240px;
+  padding-left: 0;
+  border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
+}
+.ant-pro-global-header-header-actions-avatar .ant-dropdown-trigger {
+  width: 100% !important;
+  padding-left: 0;
+}
+.ant-pro-global-header-header-actions-avatar .ant-dropdown-trigger:hover {
+  background-color: transparent;
+}
+.ant-pro-global-header-logo {
+  position: absolute!important;
+  left: 256px!important;
 }
