--- a/src/global.less
+++ b/src/global.less
@@ -110,6 +110,48 @@ ol {
 .ant-pro-setting-drawer-handle {
   display: none;
 }
+.ant-table-cell {
+  background: transparent !important;
+  border: 1px solid #f0f0f0 !important;
+  border-radius: 0 !important;
+}
+.ant-table-thead .ant-table-cell {
+  border-left: none !important;
+  border-right: none !important;
+}
+.ant-table-tbody .ant-table-cell {
+  border-top: none !important;
+  border-left: none !important;
+  border-right: none !important;
+}
+.ant-pro-table-list-toolbar-setting-items {
+  display: none;
+}
+.ant-pro-card .ant-pro-card-body {
+  padding: 0 !important;
+}
+.ant-pro-table-list-toolbar-container {
+  padding: 16px !important;
+}
+.ant-pro-table-search.ant-pro-table-search-query-filter {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 100;
+  margin: 0;
+  border-radius: 0;
+  background: #111a !important;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
+.ant-pro-table-search.ant-pro-table-search-query-filter form {
+  background: white;
+  max-width: 926px;
+  margin: 144px auto;
+  border-radius: 12px;
+}
 @media (max-width: 768px) {
   .user-styled-img {
     width: 90%;
