--- a/src/global.less
+++ b/src/global.less
@@ -67,17 +67,22 @@ ol {
 //   width: 240px;
 //   border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
 // }
+.ant-pro-global-header {
+  margin: 0 !important;
+}
 .ant-layout-sider-children {
   margin-right: 0 !important;
   padding-right: 0 !important;
 }
 .ant-menu-item-selected,
-.ant-menu-item-active {
+.ant-menu-item-active,
+.ant-menu-submenu-active {
   width: calc(100% - 4px) !important;
   border-radius: 24px 0 0 24px !important;
 }
 .ant-menu-item-selected {
   overflow: inherit !important;
+  background: #639f52 !important;
 }
 .ant-menu-item.ant-menu-item-selected:after,
 .ant-menu-item.ant-menu-item-selected:before {
@@ -94,16 +99,15 @@ ol {
 .ant-menu-item.ant-menu-item-selected:after {
   top: auto !important;
   bottom: -40px !important;
-  box-shadow: 30px -30px 0 10px #f4f7fe !important;
+  box-shadow: 30px -30px 0 10px #639f52 !important;
   opacity: 1 !important;
 }
 .ant-menu-item.ant-menu-item-selected:before {
   top: -40px !important;
-  box-shadow: 30px 30px 0 10px #f4f7fe !important;
+  box-shadow: 30px 30px 0 10px #639f52 !important;
   opacity: 1 !important;
 }
-.ant-pro-layout .ant-pro-layout-bg-list,
-.ant-menu-item-selected {
+.ant-pro-layout .ant-pro-layout-bg-list{
   background: #f4f7fe !important;
 }
 .ant-pro-sider-collapsed-button,
@@ -179,9 +183,18 @@ ol {
 .ant-pro-global-header-header-actions-avatar {
   position: absolute !important;
   left: 0 !important;
-  width: 240px;
-  padding-left: 0;
+  top: 0 !important;
+  bottom: 0 !important;
+  width: 256px;
+  background: #639f52 !important;
   border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
+}
+.ant-pro-global-header-header-actions-avatar > div {
+  color: white !important;
+}
+.ant-avatar-image {
+  width: 40px !important;
+  height: 40px !important;
 }
 .ant-pro-global-header-header-actions-avatar .ant-dropdown-trigger {
   width: 100% !important;
@@ -192,5 +205,5 @@ ol {
 }
 .ant-pro-global-header-logo {
   position: absolute!important;
-  left: 256px!important;
+  left: 272px!important;
 }
