--- a/src/global.less
+++ b/src/global.less
@@ -76,10 +76,11 @@ ol {
 }
 .ant-menu-item-selected,
 .ant-menu-item-active,
-.ant-menu-submenu-active {
-  width: calc(100% - 4px) !important;
+.ant-menu-submenu .ant-menu-submenu-title {
+  width: 100% !important;
   border-radius: 24px 0 0 24px !important;
 }
+
 .ant-menu-item-selected {
   overflow: inherit !important;
   background: #639f52 !important;
@@ -137,25 +138,25 @@ ol {
 .ant-pro-table-list-toolbar-container {
   padding: 16px !important;
 }
-.ant-pro-table-search.ant-pro-table-search-query-filter {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 100;
-  margin: 0;
-  border-radius: 0;
-  background: #111a !important;
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
-}
-.ant-pro-table-search.ant-pro-table-search-query-filter form {
-  background: white;
-  max-width: 926px;
-  margin: 144px auto;
-  border-radius: 12px;
-}
+// .ant-pro-table-search.ant-pro-table-search-query-filter {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   bottom: 0;
+//   right: 0;
+//   z-index: 100;
+//   margin: 0;
+//   border-radius: 0;
+//   background: #111a !important;
+//   -webkit-backdrop-filter: blur(5px);
+//   backdrop-filter: blur(5px);
+// }
+// .ant-pro-table-search.ant-pro-table-search-query-filter form {
+//   background: white;
+//   max-width: 926px;
+//   margin: 144px auto;
+//   border-radius: 12px;
+// }
 @media (max-width: 768px) {
   .user-styled-img {
     width: 90%;
