--- a/src/global.less
+++ b/src/global.less
@@ -117,12 +117,15 @@ ol {
 }
 .ant-table-cell {
   background: transparent !important;
-  border: 1px solid #f0f0f0 !important;
+  border: 1px solid #dfdfdf !important;
   border-radius: 0 !important;
 }
 .ant-table-thead .ant-table-cell {
   border-left: none !important;
   border-right: none !important;
+}
+.ant-table-thead .ant-table-cell:before {
+  display: none;
 }
 .ant-table-tbody .ant-table-cell {
   border-top: none !important;
@@ -134,6 +137,9 @@ ol {
 }
 .ant-pro-card .ant-pro-card-body {
   padding: 0 !important;
+}
+.ant-table-pagination.ant-pagination {
+  margin: 16px !important;
 }
 .ant-pro-table-list-toolbar-container {
   padding: 16px !important;
